--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div>
             <div class="sin-rayita center-photo">
                 <a href="https://github.com/AngieAlc" target="_blank"> 
-                    <img src="/img/github (1).png" width="35" height="35"> 
+                    <img src="img/github (1).png" width="35" height="35"> 
                 </a> 
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank"> <!-- https://www.linkedin.com/in/angiealcantara --> 
                     <img src="img/linkedin-logo.png" width="35" height="35"> 
