--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./css/styles.css"> 
+    <link rel="stylesheet" href="css/styles.css"> 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="img/AngieLogo.png">
 </head>
