--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <main>
         <div class="container"> 
             <div class="item item1"> 
-                <!-- <img src="img/cute-racoon.gif" class="full-image"> -->
+                <img src="img/cute-racoon.gif" class="full-image">
             </div>
             <div class="item item2"> 
                 <p> 
