--- a/random.html
+++ b/random.html
@@ -23,7 +23,7 @@
         <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
     
         <!-- CSS -->
-        <link rel="stylesheet" href="/css/styles.css"> 
+        <link rel="stylesheet" href="css/styles.css"> 
         <!-- Favicon -->
         <link rel="icon" type="image/png" href="img/AngieLogo.png">
     </head>
@@ -102,7 +102,7 @@
         <div>
             <div class="sin-rayita center-photo">
                 <a href="https://github.com/AngieAlc" target="_blank"> 
-                    <img src="/img/github (1).png" width="35" height="35"> 
+                    <img src="img/github (1).png" width="35" height="35"> 
                 </a> 
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank"> <!-- https://www.linkedin.com/in/angiealcantara --> 
                     <img src="img/linkedin-logo.png" width="35" height="35"> 
