--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
     
         <!-- CSS -->
-        <link rel="stylesheet" href="/css/styles.css"> 
+        <link rel="stylesheet" href="css/styles.css"> 
         <!-- Favicon -->
         <link rel="icon" type="image/png" href="img/AngieLogo.png">
         
@@ -48,7 +48,7 @@
     </div>
 
     <div class="container"> 
-        <img src="/img/rana.gif" class="gif-form">
+        <img src="img/rana.gif" class="gif-form">
         <div class="form">
             <form action="https://formspree.io/f/xpzgwpgr" method="POST"> 
                 <legend class="text" style="font-weight: bold; font-size: 20px;"> Send me a message! </legend> <br> 
@@ -69,14 +69,14 @@
                 <img src="img/AngieLogo.png" class="image-form"> 
             </form>
         </div>
-        <img src="/img/rana2.gif" class="gif-form">
+        <img src="img/rana2.gif" class="gif-form">
     </div>
 
     <footer>
         <div>
             <div class="sin-rayita center-photo">
                 <a href="https://github.com/AngieAlc" target="_blank"> 
-                    <img src="/img/github (1).png" width="35" height="35"> 
+                    <img src="img/github (1).png" width="35" height="35"> 
                 </a> 
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank"> <!-- https://www.linkedin.com/in/angiealcantara --> 
                     <img src="img/linkedin-logo.png" width="35" height="35"> 
