--- a/contact.html
+++ b/contact.html
@@ -36,10 +36,10 @@
 <body>
     <div class="navegation">
         <nav>
-            <a href="intro.html"> 
+            <a href="index.html"> 
                 <img src="img/AngieLogo.png"> 
             </a>
-            <a href="index.html" class="text animation"> Home </a>
+            <a href="index_.html" class="text animation"> Home </a>
             <a href="Me.html" class="text animation"> Me </a>
             <a href="random.html" class="text animation"> What's next? </a> 
             <a href="https://drive.google.com/file/d/1cBB8qea7xysjJd_5-T8K2z4bZn57PK1V/view?usp=sharing" class="text animation"> Resume </a>
