--- a/Me.html
+++ b/Me.html
@@ -69,7 +69,7 @@
                 <a href="stories/hobby2.html"> 
                     <p class="main-text title-chico"> Dancing/Listening to TWICE & Blackpink </p>
                     <p class="ubuntu-chico"> 
-                        I used to be the typical girl that hated k-pop songs. My bestie was the opposite. She introduced me to the kpop world
+                        I used to be the typical girl that hated k-pop songs. My friend was the opposite. She introduced me to the kpop world
                         by force xD. I ended up loving TWICE and Blackpink more than anything. I "can" sing 
                         all of their songs from memory. Even the sides ones. Not in an understandable korean, though. 
                     </p>
