--- a/Me.html
+++ b/Me.html
@@ -80,12 +80,11 @@
                     <p class="main-text title-chico"> Learning Front-End </p>
                     <p class="ubuntu-chico"> 
                         I only knew C++ and python, until last year, to write Dijsktra or something. 
-                        Not so useful skills in the real world. That's why this year*, I decided learning Front-End. Curies Community 
-                        was the best opportunity I could have, their announcement was SO catching. 
-                        I don't regret any single second I used to make this mini-project. Thanks so much all to all the instructors &#x2764;. 
+                        Not so useful skills in the real world. That's why this year*, I decided learning Front-End. 
+                        I don't regret any single second I used to make this mini-project &#x2764;. 
 
                         <br>
-                        *I'm "taking" a gap year, but it doesn't feel like that, I'm busier than ever. Applying to college season :(((. 
+                        *I'm "taking" a gap year, but it doesn't feel like that, I'm busier than ever applying to college :(((. 
                     </p>
                 <!-- </a> -->
             </div>
